[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Naaman <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
